# shadow-antibiogram

./: .gitignore  ARSMonthlyAggregator.py  README.md  cohort_for_reproducibility.py  dataset_publication.py  mac_run.sh  perc_conti.py  pyproject.toml  requirements.txt  result.txt  run.sh  running.ipynb  sequenceDiagram.md  test.py  test2.py  test3.py
datasets/: AWaRe Classification 2019.csv  AWaRe Classification 2023.csv  GISD_Bund_Kreis_Updated.csv  GISD_Bundesland_Updated.csv  antibiotic_broad_class_grouping.json  antibiotic_class.json  antibiotic_class_grouping.json  antibiotic_classification_complete.csv  antibiotic_classification_complete_original.csv  antibiotic_weights_seed_heuristics.csv  antibiotics-enrichment-data.csv  death_rate_data_combined.csv  enriched_antibiotic_classification.csv  final_complete_antibiotics_classification_v2.csv  gold_standard.csv  merged_amr_data.csv  not_recommended_antibiotics.csv  population-data-cleaned.csv  unique_pathogens.csv
datasets/WHO_Aware_data/: _metadata.json  part-00000.parquet
datasets/other_data/: Death-rate-data-by-day-5126108209005_SB.xlsx - 12613-08.csv  Death-rate-data-per-day-from-2021-2025-statistischer-bericht-sterbefaelle-tage-wochen-monate-aktuell-5126109 (1).xlsx - 12613-08.csv  Population-data-2019-2023-12411-02-03-5-B.csv  Population-data-gender-2019-2023-12411-01-01-5-B.csv
docs/: index.html
docs/networks/: net_Escherichia_Blood_Culture_cosine.html  net_Escherichia_Blood_Culture_dice.html  net_Escherichia_Blood_Culture_jaccard.html  net_Escherichia_Blood_Culture_phi.html  net_Escherichia_Urine_cosine.html  net_Escherichia_Urine_dice.html  net_Escherichia_Urine_jaccard.html  net_Escherichia_Urine_phi.html  net_Klebsiella_Blood_Culture_cosine.html  net_Klebsiella_Blood_Culture_dice.html  net_Klebsiella_Blood_Culture_jaccard.html  net_Klebsiella_Blood_Culture_phi.html  net_Klebsiella_Urine_cosine.html  net_Klebsiella_Urine_dice.html  net_Klebsiella_Urine_jaccard.html  net_Klebsiella_Urine_phi.html  net_Proteus_Blood_Culture_cosine.html  net_Proteus_Blood_Culture_dice.html  net_Proteus_Blood_Culture_jaccard.html  net_Proteus_Blood_Culture_phi.html  net_Proteus_Urine_cosine.html  net_Proteus_Urine_dice.html  net_Proteus_Urine_jaccard.html  net_Proteus_Urine_phi.html  net_Pseudomonas_Blood_Culture_cosine.html  net_Pseudomonas_Blood_Culture_dice.html  net_Pseudomonas_Blood_Culture_jaccard.html  net_Pseudomonas_Blood_Culture_phi.html  net_Pseudomonas_Urine_cosine.html  net_Pseudomonas_Urine_dice.html  net_Pseudomonas_Urine_jaccard.html  net_Pseudomonas_Urine_phi.html  net_Staphylococcus_Blood_Culture_cosine.html  net_Staphylococcus_Blood_Culture_dice.html  net_Staphylococcus_Blood_Culture_jaccard.html  net_Staphylococcus_Blood_Culture_phi.html  net_Staphylococcus_Urine_cosine.html  net_Staphylococcus_Urine_dice.html  net_Staphylococcus_Urine_jaccard.html  net_Staphylococcus_Urine_phi.html  (+8 more)
docs/use_case1/: net_temporal_ecoli_blood_2019_FDR.html  net_temporal_ecoli_blood_2019_raw.html  net_temporal_ecoli_blood_2020_FDR.html  net_temporal_ecoli_blood_2020_raw.html  net_temporal_ecoli_blood_2021_FDR.html  net_temporal_ecoli_blood_2021_raw.html  net_temporal_ecoli_blood_2022_FDR.html  net_temporal_ecoli_blood_2022_raw.html  net_temporal_ecoli_blood_2023_FDR.html  (+11 more)
scripts/: visualize_gisd.py
sensitivity_result/: aggregated_results.csv  best_configs_per_dataset.csv  cluster_composition_best_configs.csv  single_run_results.csv
src/: AntibioticResistanceAggregator.py  requirements.txt
src/runners/: CoTestingRun.py  (+7 more)
(+140 files in other folders)
