[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadow-antibiogram"
version = "0.1.0"
authors = [
    { name = "Awotoro Ebenezer", email = "ebenco94@gmail.com" },
]
description = "A tool for analyzing antibiotic resistance patterns and generating shadow antibiograms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Direct dependencies identified by pipreqs + common scientific packages
dependencies = [
    # From pipreqs (with version bounds based on your original requirements)
    "adjusttext>=1.3.0",
    "altair>=6.0.0",
    "auto-mix-prep>=0.2.0",
    "dash>=2.18.0",               # added because dash-bio depends on it
    "dash-bio>=1.0.2",
    "dask>=2024.0.0",              # from your original: 2025.9.1
    "flask>=3.0.0",
    "geopandas>=1.0.0",
    "matplotlib>=3.10.0",
    "mlxtend>=0.23.0",
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "plotly>=6.5.0",
    "pymannkendall>=1.4.3",
    "pyvis>=0.3.0",
    "ruptures>=1.1.0",
    "scikit-learn>=1.5.0",
    "scikit-posthocs>=0.11.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.0",
    "shapely>=2.0.0",
    "statsmodels>=0.14.0",

    # Common scientific Python packages (likely used, but not flagged by pipreqs)
    "networkx>=3.5",
    "python-louvain>=0.16",        # provides 'community' module
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "openpyxl>=3.1.0",             # if you read Excel files
    "xlrd>=2.0.0",                  # if you read older Excel files
    "pyarrow>=14.0.0", 
]

# Optional extras
[project.optional-dependencies]
ml = [
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "shap>=0.43.0",
    "causalml>=0.15.0",
    "dowhy>=0.11",
    "econml>=0.15",
    "pgmpy>=1.0.0",
]
viz = [
    "dash-bootstrap-components>=1.4.0",
    "kaleido>=0.2.0",
    "vegafusion>=2.0.0",
    "vl-convert-python>=1.7.0",
    "bioservices>=1.11.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pip-tools>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pre-commit>=3.0.0",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/Ebenco36/shadow-antibiogram"
Repository = "https://github.com/Ebenco36/shadow-antibiogram.git"
"Bug Tracker" = "https://github.com/Ebenco36/shadow-antibiogram/issues"

# If you have a CLI script, define it here (example)
# [project.scripts]
# shadow-run = "shadow_antibiogram.cli:main"

# Setuptools configuration
[tool.setuptools.packages.find]
where = ["src"]
include = ["shadow_antibiogram*"]

# Include data files (CSV, etc.)
[tool.setuptools.package-data]
"shadow_antibiogram" = [
    "controllers/similarity/*.csv",
    "mappers/*.txt",
    "**/*.json",
    # Add other patterns as needed
]

[tool.setuptools]
zip-safe = false